--- a/RMToDoList/Base.lproj/Main.storyboard
+++ b/RMToDoList/Base.lproj/Main.storyboard
@@ -42,6 +42,9 @@
                                 <color key="backgroundColor" red="0.71232191690000002" green="1" blue="0.74066709419999999" alpha="1" colorSpace="calibratedRGB"/>
                                 <attributedString key="attributedText"/>
                                 <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="7Xp-7r-pWi"/>
+                                </connections>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tnf-ZJ-0sR">
                                 <rect key="frame" x="20" y="94" width="560" height="30"/>
@@ -96,7 +99,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iSJ-0x-lzn">
-                                <rect key="frame" x="20" y="141" width="560" height="153"/>
+                                <rect key="frame" x="20" y="141" width="560" height="126"/>
                                 <color key="backgroundColor" red="1" green="0.93679803544292217" blue="0.6963882891805061" alpha="1" colorSpace="calibratedRGB"/>
                                 <state key="normal" title="Edit"/>
                                 <connections>
@@ -104,7 +107,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="c2o-8o-NEt">
-                                <rect key="frame" x="20" y="294" width="560" height="153"/>
+                                <rect key="frame" x="20" y="267" width="560" height="127"/>
                                 <color key="backgroundColor" red="1" green="0.38879715020519645" blue="0.35019033948579759" alpha="1" colorSpace="calibratedRGB"/>
                                 <state key="normal" title="Delete"/>
                                 <connections>
@@ -118,9 +121,12 @@
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="dxQ-VV-l6C" id="fJM-40-R0Z"/>
+                                </connections>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="g7d-G0-vkN">
-                                <rect key="frame" x="20" y="447" width="560" height="153"/>
+                                <rect key="frame" x="20" y="394" width="560" height="126"/>
                                 <color key="backgroundColor" red="0.49491293143108539" green="1" blue="0.89490785065838174" alpha="1" colorSpace="calibratedRGB"/>
                                 <state key="normal" title="Update"/>
                                 <connections>
@@ -135,6 +141,7 @@
                             <constraint firstItem="c2o-8o-NEt" firstAttribute="leading" secondItem="g7d-G0-vkN" secondAttribute="leading" id="KCk-TO-Dg0"/>
                             <constraint firstItem="2Tg-Rn-Dxg" firstAttribute="trailing" secondItem="EmC-bO-n3b" secondAttribute="trailingMargin" id="LnQ-B9-dNa"/>
                             <constraint firstItem="c2o-8o-NEt" firstAttribute="trailing" secondItem="g7d-G0-vkN" secondAttribute="trailing" id="Net-kv-maL"/>
+                            <constraint firstItem="V6p-q8-kXM" firstAttribute="top" secondItem="g7d-G0-vkN" secondAttribute="bottom" id="Njb-cg-YOR"/>
                             <constraint firstItem="iSJ-0x-lzn" firstAttribute="top" secondItem="2Tg-Rn-Dxg" secondAttribute="bottom" id="R7E-Wt-2vB"/>
                             <constraint firstItem="iSJ-0x-lzn" firstAttribute="leading" secondItem="c2o-8o-NEt" secondAttribute="leading" id="TTK-SQ-M2I"/>
                             <constraint firstItem="g7d-G0-vkN" firstAttribute="height" secondItem="iSJ-0x-lzn" secondAttribute="height" id="Tof-bk-kgx"/>
@@ -144,10 +151,15 @@
                             <constraint firstItem="c2o-8o-NEt" firstAttribute="width" secondItem="iSJ-0x-lzn" secondAttribute="width" id="bH8-CX-7s9"/>
                             <constraint firstItem="2Tg-Rn-Dxg" firstAttribute="leading" secondItem="iSJ-0x-lzn" secondAttribute="leading" id="gQm-fU-UBR"/>
                             <constraint firstItem="iSJ-0x-lzn" firstAttribute="trailing" secondItem="c2o-8o-NEt" secondAttribute="trailing" id="lmY-6P-C5u"/>
-                            <constraint firstItem="V6p-q8-kXM" firstAttribute="top" secondItem="g7d-G0-vkN" secondAttribute="bottom" id="msn-9O-Cqs"/>
+                            <constraint firstItem="V6p-q8-kXM" firstAttribute="top" secondItem="g7d-G0-vkN" secondAttribute="bottom" constant="80" id="msn-9O-Cqs"/>
                             <constraint firstItem="c2o-8o-NEt" firstAttribute="top" secondItem="iSJ-0x-lzn" secondAttribute="bottom" id="pwA-Af-pP4"/>
                             <constraint firstItem="2Tg-Rn-Dxg" firstAttribute="leading" secondItem="EmC-bO-n3b" secondAttribute="leadingMargin" id="xdD-6J-BMx"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="Njb-cg-YOR"/>
+                            </mask>
+                        </variation>
                     </view>
                     <navigationItem key="navigationItem" id="d2V-a0-5A5"/>
                     <connections>
